<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2022 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/connected_app_nav_graph"
    app:startDestination="@id/connectedAppFragment">

    <fragment
        android:id="@+id/connectedAppFragment"
        android:label="@string/app_access_title"
        android:name="com.android.healthconnect.controller.permissions.app.ConnectedAppFragment">
        <argument
            android:name="android.intent.extra.PACKAGE_NAME"
            app:argType="string" />
        <action
            android:id="@+id/action_connectedApp_to_appData"
            app:destination="@id/appDataFragment" />
        <action
            android:id="@+id/action_connectedAppFragment_to_additionalAccessFragment"
            app:destination="@id/additionalAccessFragment" />
    </fragment>

    <fragment
        android:id="@+id/appDataFragment"
        android:label="@string/app_data_title"
        android:name="com.android.healthconnect.controller.data.appdata.AppDataFragment">
        <argument
            android:name="android.intent.extra.PACKAGE_NAME"
            app:argType="string" />
        <action
            android:id="@+id/action_appData_to_appEntries"
            app:destination="@id/appEntriesFragment" />
    </fragment>

    <fragment
        android:id="@+id/appEntriesFragment"
        android:label="App entries"
        android:name="com.android.healthconnect.controller.data.entries.AppEntriesFragment">
        <argument
            android:name="android.intent.extra.PACKAGE_NAME"
            app:argType="string" />
        <action
            android:id="@+id/action_appEntriesFragment_to_dataEntryDetailsFragment"
            app:destination="@id/dataEntryDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/dataEntryDetailsFragment" android:name="com.android.healthconnect.controller.entrydetails.DataEntryDetailsFragment"
        android:label="@string/entry_details_title" >
    </fragment>

    <fragment
        android:id="@+id/additionalAccessFragment"
        android:name="com.android.healthconnect.controller.permissions.additionalaccess.AdditionalAccessFragment"
        android:label="@string/additional_access_label" >
        <argument
            android:name="android.intent.extra.PACKAGE_NAME"
            app:argType="string" />
    </fragment>
</navigation>