<!--
  ~ Copyright (C) 2024 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_large">
    <RadioGroup
        android:id="@+id/radio_group_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_daily"
            android:text="@string/frequency_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="0dp"
            android:textAppearance="?attr/textAppearanceItem" />
        <RadioButton
            android:id="@+id/radio_button_weekly"
            android:text="@string/frequency_weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="0dp"
            android:textAppearance="?attr/textAppearanceItem" />
        <RadioButton
            android:id="@+id/radio_button_monthly"
            android:text="@string/frequency_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="0dp"
            android:textAppearance="?attr/textAppearanceItem"/>
    </RadioGroup>
</LinearLayout>